--- a/index.html
+++ b/index.html
@@ -1362,33 +1362,37 @@
                     </div>
                     <script>
                         (function () {
-                            const MIN_SCALE = 0.5;
-                            const MAX_SCALE = 1.0;
+                            const MIN_SCALE = 0.1;
+                            const PRINT_SAFE_FACTOR = 0.95;
 
                             function getPrintableLetterHeightPx() {
                                 const probe = document.createElement('div');
-                                probe.style.width = '25.4cm';
-                                probe.style.height = '27.94cm';
+                                probe.style.width = '100mm';
+                                probe.style.height = '100mm';
                                 probe.style.position = 'absolute';
                                 probe.style.left = '-9999px';
+                                probe.style.top = '-9999px';
                                 probe.style.visibility = 'hidden';
                                 document.body.appendChild(probe);
-                                const pxPerMm = probe.getBoundingClientRect().height / 279.4;
+                                const pxPerMm = probe.getBoundingClientRect().height / 100;
                                 probe.remove();
 
                                 const marginMm = 8;
                                 const printableMm = 279.4 - marginMm - marginMm;
-                                return printableMm * pxPerMm;
+                                return Math.max(120, printableMm * pxPerMm);
                             }
 
                             function autoFitInvoices() {
                                 const copies = document.getElementById('pdfCopies');
-                                if (!copies) return;
+                                const fitArea = document.getElementById('pdfFitArea');
+                                if (!copies || !fitArea) return;
 
-                                const availableHeight = getPrintableLetterHeightPx();
-                                const rawHeight = copies.scrollHeight;
-                                
-                                const scale = Math.max(MIN_SCALE, Math.min(MAX_SCALE, availableHeight / rawHeight));
+                                document.documentElement.style.setProperty('--pdf-scale', '1');
+                                const availableHeight = Math.max(120, getPrintableLetterHeightPx() * PRINT_SAFE_FACTOR);
+
+                                const rawHeight = Math.max(1, copies.scrollHeight);
+                                const scale = Math.max(MIN_SCALE, Math.min(1, availableHeight / rawHeight));
+
                                 document.documentElement.style.setProperty('--pdf-scale', String(scale));
                             }
 
