--- a/index.html
+++ b/index.html
@@ -1065,6 +1065,7 @@
         }
 
         function renderInvoiceCard(inv, canDelete, withTitle = false) {
+            if (!canViewInvoice(inv)) return '';
             const statusClass = getStatusClass(inv.status);
             const statusText = getStatusText(inv.status);
             const canViewAmount = canSeeInvoiceAmount(inv);
